created post request  form then display on index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>Mini Message Board</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1></h1>
+    <p>Welcome to</p>
+    <a href="/new">Make a post</a>
+    <ul>
+      <% for(let i=0; i < messages.length; i++) { %>
+        <li class="messageCard">
+          <h1><%= messages[i].user %></h1>
+          <h2><%= messages[i].text %></h2>
+          <p><%= messages[i].added %></p>
+        </li>
+      <% } %>
+    </ul>
   </body>
 </html>
